--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,4 +31,5 @@ queries.statement = "CONSTRUCT WHERE {?s <http://www.w3.org/2002/07/owl#versionI
 queries.collection = "CONSTRUCT WHERE {<http://rightsstatements.org/vocab/collection-%1$s/%2$s/> <http://www.w3.org/2002/07/owl#versionInfo> \"%2$s\" . <http://rightsstatements.org/vocab/collection-%1$s/%2$s/> ?p ?o }"
 queries.localize = "CONSTRUCT {?s ?p ?o} WHERE {?s ?p ?o . FILTER(!isLiteral(?o) || lang(?o) = \"\" || langMatches(lang(?o), \"%1$s\" ))}"
 languages.available = "en ca de es et fi fr hi hr it lt nl pl"
-source.site.http = "https://rightsstatements.org"
+source.site.http = "http://localhost:4000"
+source.site.local="/resources"
