Changes for upgrade to java 11

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,10 +1,10 @@
 play.modules.enabled += "modules.VocabProviderModule"
 play.modules.enabled += "modules.LayoutProviderModule"
 vocab.provider = "services.GitVocabProvider"
-source.data.formats.turtle.ext = ".ttl"
-source.data.formats.turtle.lang = "TURTLE"
-source.data.formats.json.ext = ".json"
-source.data.formats.json.lang = "JSONLD"
+#source.data.formats.turtle.ext = ".ttl"
+#source.data.formats.turtle.lang = "TURTLE"
+#source.data.formats.json.ext = ".json"
+#source.data.formats.json.lang = "JSONLD"
 source.data.git.remote = "https://github.com/rightsstatements/data-model.git"
 source.data.git.local = "/tmp/data-model"
 source.data.git.rev = "master"
@@ -33,3 +33,18 @@ queries.localize = "CONSTRUCT {?s ?p ?o} WHERE {?s ?p ?o . FILTER(!isLiteral(?o)
 languages.available = "en ca de es et fi fr hi hr it lt nl pl"
 source.site.http = "http://localhost:4000"
 source.site.local="/resources"
+
+source.data.formats{
+json {
+ext =".json"
+lang ="JSONLD"
+}
+turtle {
+ext=".ttl"
+lang="TURTLE"
+}
+
+
+}
+play.server.pidfile.path=/dev/null
+play.http.secret.key = "^Z5sUMS0j^inD7xJ4/vt0rFC?F>y5@kkdiGN:ROV5lfaP1:[ag72[S8gLD90PZWS"
