--- a/k8s/overlays/cloud/ingress.yaml.template
+++ b/k8s/overlays/cloud/ingress.yaml.template
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: rights-statements-ingress
+  name: rights-app-ingress
   annotations:
     ${K8S_INGRESS_ANNOTATIONS}
 spec:
@@ -18,6 +18,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rights-statements-service
+                name: rights-app-service
                 port:
                   number: 80
