--- a/k8s/overlays/cloud/service.yaml
+++ b/k8s/overlays/cloud/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rights-statements-service
+  name: rights-app-service
 spec:
   # selector provided via kustomize
   ports:
