--- a/k8s/overlays/dev/nodeport.yaml
+++ b/k8s/overlays/dev/nodeport.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rights-statements-nodeport
+  name: rights-app-nodeport
 spec:
   type: NodePort
   ports:
