--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -10,22 +10,22 @@ spec:
         - name: rights-app
           image: europeana/rights-app
           ports:
-            - containerPort: 8080
-          livenessProbe:
-            httpGet:
-              port: 8080
-              path: /actuator/health/liveness
-              httpHeaders:
-                - name: Accept
-                  value: application/json
-            initialDelaySeconds: 90
-            periodSeconds: 60
-          readinessProbe:
-            httpGet:
-              port: 8080
-              path: /actuator/health/readiness
-              httpHeaders:
-                - name: Accept
-                  value: application/json
-            initialDelaySeconds: 60
-            periodSeconds: 60
+            - containerPort: 9000
+#          livenessProbe:
+#            httpGet:
+#              port: 8080
+#              path: /actuator/health/liveness
+#              httpHeaders:
+#                - name: Accept
+#                  value: application/json
+#            initialDelaySeconds: 90
+#            periodSeconds: 60
+#          readinessProbe:
+#            httpGet:
+#              port: 8080
+#              path: /actuator/health/readiness
+#              httpHeaders:
+#                - name: Accept
+#                  value: application/json
+#            initialDelaySeconds: 60
+#            periodSeconds: 60
