Changes for k8s app name correction

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,3 +48,6 @@ lang="TURTLE"
 }
 play.server.pidfile.path=/dev/null
 play.http.secret.key = "^Z5sUMS0j^inD7xJ4/vt0rFC?F>y5@kkdiGN:ROV5lfaP1:[ag72[S8gLD90PZWS"
+play.filters.hosts {
+  allowed = ["."]
+}
