Changes for response handling and config reading

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,18 +49,18 @@ source.data.formats{
   }
 }
 
-parser{
-text/turtle = "TURTLE"
-application/json = "JSON-LD"
+#parser{
+#text/turtle = "TURTLE"
+#application/json = "JSON-LD"
 #application/ld+json = "JSON-LD"
-  #"*"/"*" = "JSON-LD"
-}
-extension {
-  text/turtle = "ttl"
-  application/json = "json"
+#"*"/"*" = "JSON-LD"
+#}
+#extension {
+ # text/turtle = "ttl"
+  #application/json = "json"
   #"application/ld+json" = "jsonld"
   #"*"/"*" = "json"
- }
+ #}
 
 
 
@@ -70,3 +70,5 @@ play.http.secret.key = "^Z5sUMS0j^inD7xJ4/vt0rFC?F>y5@kkdiGN:ROV5lfaP1:[ag72[S8g
 play.filters.hosts {
   allowed = ["."]
 }
+
+siteurl = "http://rights-app.test.eanadev.org/"
