Changes for response handling and config reading

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,7 +35,7 @@ localize = "CONSTRUCT {?s ?p ?o} WHERE {?s ?p ?o . FILTER(!isLiteral(?o) || lang
 
 
 languages.available = "en ca de es et fi fr hi hr it lt nl pl"
-source.site.http = "http://rights-app-website.test.eanadev.org"
+source.site.http = "https://rights-app-website.test.eanadev.org"
 source.site.local="/resources"
 
 source.data.formats{
@@ -71,4 +71,4 @@ play.filters.hosts {
   allowed = ["."]
 }
 
-siteurl = "http://rights-app.test.eanadev.org/"
+siteurl = "https://rights-app.test.eanadev.org/"
