Changes for id matching

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,4 +71,4 @@ play.filters.hosts {
   allowed = ["."]
 }
 
-siteurl = "https://rights-app.test.eanadev.org/"
+siteurl = "http://rights-app.test.eanadev.org/"
