Changes for overriding properties

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@ source.data.git.rev = "master"
 layout.provider = "services.HttpLayoutProvider"
 source.site.git.remote = "https://github.com/europeana/rightsstatements-website.git"
 source.site.git.local = "/tmp/rightsstatements-website.git"
-source.site.git.branch = "origin/EA-3884-EA-3882-EA-3884-RightsStatement-Upgrade-to-docker-and-set-up-k8s-deployment"
+source.site.git.branch = "origin/master"
 default.mime = "application/json"
 default.parser = "JSON-LD"
 params.InC-OW-EU = "relatedURL"
@@ -72,5 +72,5 @@ play.filters.hosts {
 }
 
 
-siteurl = "http://rights-app.test.eanadev.org/"
-source.site.http = "http://rights-app-website.test.eanadev.org"
+siteurl =
+source.site.http =
