Changes for conf defaults and cleanup

--- a/k8s/overlays/cloud/deployment_patch.yaml.template
+++ b/k8s/overlays/cloud/deployment_patch.yaml.template
@@ -13,6 +13,15 @@ spec:
       containers:
         - name: rights-app
           imagePullPolicy: Always
+          env:
+            - name: JAVA_TOOL_OPTIONS
+              value: "-javaagent:/opt/docker/lib/co.elastic.apm.elastic-apm-agent-1.34.1.jar
+                      -Delastic.apm.application_packages=${ELASTIC_APP_PACKAGES}
+                      -Delastic.apm.server_urls=${ELASTIC_APM_SERVERS}
+                      -Delastic.apm.enabled=${COLLECT_APM}
+                      -Delastic.apm.service_name=${APP_NAME}
+                      -Delastic.apm.environment=${K8S_NAMESPACE}"
+
           resources:
             requests:
               memory: "${MEMORY_REQUEST}M"
