--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,7 @@ source.data.formats{
     lang="TURTLE"
   }
 }
+source.site.http = "https://rightsstatements.org"
 play.server.pidfile.path=/dev/null
 play.http.secret.key = "^Z5sUMS0j^inD7xJ4/vt0rFC?F>y5@kkdiGN:ROV5lfaP1:[ag72[S8gLD90PZWS"
 play.filters.hosts {
