Changes for probe settings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,3 +40,4 @@ play.http.secret.key = "^Z5sUMS0j^inD7xJ4/vt0rFC?F>y5@kkdiGN:ROV5lfaP1:[ag72[S8g
 play.filters.hosts {
   allowed = ["."]
 }
+blacklist.relatedURL = [".*digwow.net.*",".*iliiili.com.*",".*weebly.com.*"]
